# nn

./: CMakeLists.txt  config.json
include/: nn.hpp
src/: nn.cpp
